syntax="proto3";

package Protocol;

message Message{

enum Type {
ACK 		 = 0;
REQUEST 	 = 1;
NOTIFICATION = 2;
ERROR		 = 4;
}

enum CtrlType {
NONE			  = 0;
CREATE_GROUP      = 1;//创建群
GROUP_ADDMEMBERS  = 2;//添加成员
MSG_BACK          = 3;//消息撤回
CREATE_SESSION	  = 4;
}
enum ContentType {
TEXT = 0;
IMG  = 1;
FILE = 2;
}
enum ErrorCode {
REQUEST_BODY_PARAMS_ERROR=0;
GROUP_CREATION_FAILED = 1;
WITHDRAW_MESSAGE_FAILED = 2;
CHAT_SESSION_CREATION_FAILED = 3;
}

Type type   			= 1;
CtrlType cmd			= 2;
int64 from              = 3; //发送者
int64 to                = 4;//接受着
string content          = 5;//消息内容
ContentType content_type= 6;
bool isgroup			= 7;
int64 msgid             = 8; //消息服务器对消息的编号
int64  arrive_time		= 9; //到达服务器时间
int64  send_time        = 10;
repeated int64 userlist = 11;
ErrorCode errcode		= 12;
}
